fixing layout issues on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,13 +35,18 @@ body {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  align-content: center;
+
+  @media only screen and (min-width: $md) {
+  }
+
+  @media only screen and (max-width: $md) {
+    align-content: flex-start;
+  }
 
   &--persona {
     @extend .flex-container;
-    @media only screen and (min-width: $md) {
-      height: 100vh;
-    }
+    justify-content: space-between;
+    align-content: center;
 
     & > * {
       flex: 1 250px;
@@ -60,7 +65,12 @@ body {
 
   &--profile {
     @extend .flex-container;
+    justify-content: center;
+    align-content: center;
     align-items: stretch;
+    @media only screen and (min-width: $md) {
+      margin-top: 10%;
+    }
 
     & > * {
       background-color: white;
@@ -75,12 +85,16 @@ body {
       flex: 3 500px 500px;
       padding: 2rem;
       align-self: flex-start;
+      @media only screen and (max-width: $md) {
+        height: fit-content;
+      }
     }
   }
 
   &--justified {
     @extend .flex-container;
     justify-content: space-between;
+    align-content: center;
 
     & > * {
       @media only screen and (max-width: $md) {
@@ -142,8 +156,10 @@ body {
 }
 
 section {
-  height: 100vh;
   padding: 2rem;
+  @media only screen and (min-width: $md) {
+    height: 100vh;
+  }
 }
 
 footer {
